<resources>
    <string name="app_name">Websocket Test</string>
    <string name="settings">Open settings</string>
    <string name="port">Port</string>
    <string name="host">Host</string>
    <string name="saveSettings">Save settings</string>
    <string name="Settings">Settings</string>
    <string name="preference_file_key">com.garlic.websockettest.PREFERENCE_FILE_KEY</string>
    <string name="message_overview">Message overview</string>
    <string name="messages_empty_all">Delete messages</string>
    <string name="messages_refresh">Refresh messages</string>
    <string name="MessageRetrievalService">Websocket test</string>
    <string name="MessageRetrievalService_background_connection_enabled">Background connection enabled</string>
    <string name="NotificationChannel">foreground_service</string>
    <string name="websocket_failure">Websocket failure</string>
    <string name="websocket_failure_messsage">The websocket connection failed:</string>
    <string name="message_view_text">No message</string>
    <string name="pause_connection">Pause connection</string>
    <string name="start_foreground_service">Start foreground service</string>
    <string name="stop_foreground_service">Stop foreground service</string>
</resources>