<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ToolbarTheme"
        app:layout_scrollFlags="scroll|enterAlways" />

<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/hostTextView"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:text="@string/host"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextHost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/host"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hostTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/portTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/port"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hostTextView" />

    <EditText
        android:id="@+id/editTextPort"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/port"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextHost"
        app:layout_constraintTop_toBottomOf="@+id/editTextHost" />

    <Button
        android:id="@+id/save_settings_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="saveSettings"
        android:text="@string/saveSettings"
        app:layout_constraintEnd_toEndOf="@+id/editTextPort"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="@+id/portTextView"
        app:layout_constraintTop_toBottomOf="@+id/pause_connection_switch" />

    <Switch
        android:id="@+id/pause_connection_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pause_connection"
        app:layout_constraintEnd_toEndOf="@+id/editTextPort"
        app:layout_constraintStart_toStartOf="@+id/portTextView"
        app:layout_constraintTop_toBottomOf="@+id/editTextPort"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/save_settings_button"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/foreground_service_start_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/start_foreground_service"
        app:layout_constraintEnd_toEndOf="@+id/save_settings_button"
        app:layout_constraintStart_toStartOf="@+id/save_settings_button"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        android:onClick="startForeGroundService"/>

    <Button
        android:id="@+id/foreground_service_stop_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/stop_foreground_service"
        app:layout_constraintEnd_toEndOf="@+id/foreground_service_start_button"
        app:layout_constraintStart_toStartOf="@+id/foreground_service_start_button"
        app:layout_constraintTop_toBottomOf="@+id/foreground_service_start_button"
        android:onClick="stopForeGroundService"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>